--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "main": "index.html",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "lint": "eslint *.js *.html",
+    "lint": "eslint src/*.js src/*.jsx src/*/*.js src/*/*.jsx **.html",
     "serve": "./node_modules/.bin/http-server ./ -c-1 -o'index.html'"
   },
   "keywords": [
@@ -15,20 +15,36 @@
   "author": "Lee Symes",
   "license": "ISC",
   "devDependencies": {
+    "babel-core": "^6.5.2",
+    "babel-loader": "^6.2.3",
+    "babel-preset-es2015": "^6.5.0",
+    "babel-preset-react": "^6.5.0",
+    "eslint": "^2.2.0",
+    "eslint-config-standard": "^5.1.0",
+    "eslint-config-standard-react": "^2.3.0",
     "eslint-plugin-html": "^1.3.0",
-    "http-server": "^0.8.5",
-    "standard": "^5.4.1"
+    "eslint-plugin-promise": "^1.0.8",
+    "eslint-plugin-react": "^4.0.0",
+    "eslint-plugin-standard": "^1.3.2",
+    "webpack": ">=1.3.0",
+    "webpack-dev-server": "^1.14.1"
   },
   "eslintConfig": {
-    "extends": "standard",
+    "extends": [
+      "standard",
+      "standard-react"
+    ],
     "plugins": [
-      "html"
+      "html",
+      "react"
     ],
     "settings": {
       "html/indent": "+2"
     }
   },
   "dependencies": {
-    "oauthio-web": "^0.5.0"
+    "oauthio-web": "^0.5.0",
+    "react": "^0.14.7",
+    "react-dom": "^0.14.7"
   }
 }
