--- a/package.json
+++ b/package.json
@@ -50,6 +50,7 @@
     "oauthio-web": "^0.5.0",
     "radium": "^0.16.6",
     "react": "^0.14.7",
-    "react-dom": "^0.14.7"
+    "react-dom": "^0.14.7",
+    "react-icons": "^1.0.3"
   }
 }
